Fix modal width and text align plus some suggestions

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -84,30 +84,7 @@
 
 @media (max-width: 630px) {
   .card {
-    display: flex;
-    flex-direction: column;
-    height: auto;
-    width: 100%;
-    column-gap: 8px;
     min-width: 288px;
-  }
-
-  .card__caption {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: flex-start;
-    font-size: 20px;
-    padding: 10px 0 0 0;
-  }
-
-  .card__image {
-    height: auto;
-    width: 100%;
-    background-size: contain;
-    border-radius: 8px;
-    margin: 0;
-    aspect-ratio: 1/1;
   }
 
   .card__text {
