--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -16,7 +16,6 @@
 
 @media (max-width: 1320px) {
   .cards__list {
-    display: grid;
     grid-template-columns: repeat(2, minmax(0, 1fr));
     gap: 16px;
   }
@@ -26,6 +25,5 @@
   .cards__list {
     grid-template-columns: 1fr;
     gap: 12px;
-    justify-content: center;
   }
 }
