--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -54,13 +54,11 @@
   display: block;
   color: #ffffff;
   background-color: #212121;
-  width: 100%;
-  max-width: 214px;
+  width: fit-content;
   padding: 4px 8px;
   border: none;
   border-radius: 8px;
   margin: 0;
-  text-align: center;
   box-sizing: border-box;
   font-size: 20px;
 }
@@ -152,7 +150,6 @@
 
 @media (max-width: 630px) {
   .modal__container {
-    width: 100%;
     padding: 12px;
   }
   .modal__title {
@@ -162,17 +159,8 @@
   }
 
   .modal__close-button {
-    display: flex;
-    position: absolute;
     top: 12px;
     right: 12px;
-    width: 40px;
-    height: 40px;
-    justify-content: center;
-    align-items: center;
-    border: none;
-    background: none;
-    opacity: 0.4;
     padding: 10px 0;
   }
 
@@ -186,7 +174,6 @@
 
   .modal__submit-button {
     max-width: none;
-    width: 100%;
   }
 
   .modal__image-container {
