--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -158,8 +158,6 @@
   }
 
   .profile__caption {
-    display: flex;
-    flex-direction: column;
     gap: 6px;
     margin: 0 0 32px;
   }
